# AgentTown

./: .gitignore  CAI.sln  CMakeLists.txt  Dockerfile  README.md  Standards.md
.circleci/: config.yml
.github/workflows/: CMakeBuild.yml  msbuild.yml  test.yml
AI_Elements/: AI_Elements.vcxproj  AI_Elements.vcxproj.filters  Agent.cpp  Agent.h  Agent_Parameters.h  CMakeLists.txt  Identification_Details.h  Message_Processor.h
CAI/: AABB.cpp  AABB.h  APH.h  CAI.rc  CAI.vcxproj  CAI.vcxproj.filters  CMakeLIsts.txt  CMakeLists.txt  Car.cpp  Car.h  ClientThreadConnection.cpp  ClientThreadConnection.h  Cooldown.h  Drawable.h  Factory.cpp  Factory.h  Framework.cpp  Framework.h  GameEngine.cpp  GameEngine.h  Graphics.cpp  Graphics.h  GraphicsList.txt  Interactable.h  Item.cpp  Item.h  Living.cpp  Living.h  MState.h  MainServer.cpp  MainServer.h  Map.txt  MessageParser.h  Module.ixx  Monster.cpp  Monster.h  Movable.h  MusicList.txt  Object.h  PState.h  (+28 more)
CAI/AI_Elements/: Identification_Details.h  Message_Processor.h  agent.cpp  agent.h  agent_parameters.h
CAI/AI_Elements/Interfaces/: GraphicsObserver.h  Interface_Distance_Calculatable.h  Interface_Graphics_Observer.h  Interface_Network_Observer.h  Interface_Observer.h  NetworkObserver.h  Observer.h  distanceCalculatable.h  interface_calculatable.h
CAI/Framework/: ConcreteMediator.h  Concrete_Mediator.h  Framework.cpp  Framework.h
CAI/Framework/Interfaces/: Component.h  Interface_Mediator.h  Mediator.h  interface_runnable.h
CAI/Graphics_Engine/: Cooldown.cpp  Factory.cpp  Factory.h  GameEngine.cpp  GameEngine.h  GraphicsEngine.cpp  GraphicsEngine.h  Graphics_Engine.cpp  Graphics_Engine.h
CAI/Graphics_Engine/Graphics/: Graphics.cpp  Graphics.h  Textures.cpp  Textures.h
CAI/Graphics_Engine/Interfaces/: Actionable.h  Interactable.h  Interface_Actionable.h  Interface_Drawable.h  Interface_Interactable.h
CAI/Graphics_Engine/Objects/: Car.cpp  Car.h  Movable.cpp  Movable.h  Object.h  StaticObject.h
CAI/Graphics_Engine/Physics/: Physics.cpp  Physics.h
CAI/Graphics_Engine/Sound/: Sound.cpp  Sound.h
CAI/Graphics_Engine/Space/: AABB.cpp  AABB.h  QuadTree.cpp  QuadTree.h
CAI/Header_Files/: APH.h
CAI/Message_Interpreting_System/: Interpreter.h
CAI/Message_System/: MessageGenerator.h  MessageParser.h  Message_Generator.h  Message_Parser.h  QueueManager.h  Queue_Manager.h  message.h
CAI/Network_Representation/: Agent_Network.h  Network.h
CAI/Server_Communications/: ClientThreadConnection.cpp  ClientThreadConnection.h  MainServer.cpp  MainServer.h  PseudoServer.cpp  PseudoServer.h
CAI/Server_Communications/Interfaces/: Connection.h
CAI_UnitTest/: AI_Elements_UnitTests.cpp  CAI_UnitTest.cpp  CAI_UnitTest.vcxproj  CAI_UnitTest.vcxproj.filters  Framework_Tests.cpp  Graphics_engine_UnitTests.cpp  Interpreter_UnitTests.cpp  Message_Dependencies.h  Message_System_UnitTests.cpp  Network_Represenation_UnitTests.cpp  Server_Communications_UnitTests.cpp  pch.h
Design/: User_Stories.md  client_story.md  design_explained_vid.md  design_power_point.pptx  readme.md
Framework/: CMakeLists.txt  Concrete_Mediator.h  Framework.cpp  Framework.h  Framework.vcxproj  Framework.vcxproj.filters  Source.cpp  log.txt
Interfaces/: CMakeLists.txt  Component.h  Connection.h  Debug.h  Interface_Actionable.h  Interface_Calculatable.h  Interface_Distance_Calculatable.h  Interface_Drawable.h  Interface_Framework.h  Interface_Graphics_Observer.h  Interface_Interactable.h  Interface_Mediator.h  Interface_Network_Observer.h  Interface_Observer.h  Interface_Runnable.h  Interfaces.vcxproj  Interfaces.vcxproj.filters  System.h
Message_Interpreting_System/: CMakeLists.txt  Interpreter.cpp  Interpreter.h  Message_Interpreting_System.vcxproj  Message_Interpreting_System.vcxproj.filters
Message_System/: CMakeLists.txt  Message_Generator.h  Message_Parser.h  Message_System.vcxproj  Message_System.vcxproj.filters  Queue_Manager.h  message.h
Network_Representation/: Agent_Network.cpp  Agent_Network.h  CMakeLists.txt  Network.h  Network_Representation.vcxproj  Network_Representation.vcxproj.filters  Networks_Manager.cpp  Networks_Manager.h
Server_Communications/: CMakeLists.txt  ClientThreadConnection.cpp  ClientThreadConnection.h  MainServer.cpp  MainServer.h  Server_Communications.vcxproj  Server_Communications.vcxproj.filters
client/: simple_client.py
